Added new models

--- a/training.ipynb
+++ b/training.ipynb
@@ -1159,6 +1159,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Feature Reduction Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Model Evaluation"
    ]
   },
