Added new model notes

--- a/training.ipynb
+++ b/training.ipynb
@@ -1355,7 +1355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Some nice results but this evaluation was solely done on accuracy, if we focus on f2 scoring and on different subsets of data, will our results still be this impressive? Let's find out"
+    "# Some nice results but this evaluation was solely done on accuracy. Given the severity of a heart attack, we need to change our coring metric. If we measure our model on F2 scoring and on different subsets of data, will our results still be this impressive? Let's find out"
    ]
   },
   {
