Added anova testing

--- a/training.ipynb
+++ b/training.ipynb
@@ -1182,6 +1182,7 @@
     "def f2_measure(y_true, y_pred):\n",
     "  return fbeta_score(y_true, y_pred, beta=2)\n",
     "\n",
+    "\n",
     "# evaluate a model\n",
     "def evaluate_model(X, y, model):\n",
     "  # define evaluation procedure\n",
@@ -1432,14 +1433,12 @@
     "last_ix = len(df.columns)-1\n",
     "X, y = df.drop(df.columns[last_ix], axis=1), df[df.columns[last_ix]]\n",
     "models, names = get_models()\n",
-    "results = list()\n",
     "# evaluate each model\n",
     "for i in range(len(models)):\n",
     "  # Wrap the model in a pipeline with StandardScaler\n",
     "  pipeline = Pipeline(steps=[('scaler', StandardScaler()),(\"power_tranformer\", PowerTransformer()), ('model', models[i])])\n",
     "  # Evaluate the model\n",
     "  scores = evaluate_model(X, y, pipeline)  # Replace X, y with your data\n",
-    "  results.append(scores)\n",
     "  # summarize and store\n",
     "  print('>%s %.3f (%.3f)' % (names[i], np.mean(scores), np.std(scores)))"
    ]
@@ -1448,7 +1447,354 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding power transformer transformation to out dataset to change the distrbiution to be more Gaussian like added a boost in scoring. We have LR, LDA, SVC and GNB as our leading canadiates to run further tests on"
+    "### Adding power transformer transformation to out dataset to change the distrbiution to be more Gaussian like added a boost in scoring. We have LR, LDA, SVC and GNB as our leading canadiates to run further tests on but we should work on feature testing as well to find the most relevant features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Selection Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numerical input and a categorical output of a binary problem (1 representing a heart attack and 0 representing not a heart attack) == ANOVA as our best measure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K is 1\n",
+      ">RFC 0.729 (0.090)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.732 (0.096)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.825 (0.054)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.712 (0.111)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.712 (0.111)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.724 (0.102)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.712 (0.111)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.711 (0.113)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.712 (0.111)\n",
+      "---------------------------------------------------------------\n",
+      "K is 2\n",
+      ">RFC 0.803 (0.126)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.795 (0.128)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.850 (0.084)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.847 (0.116)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.780 (0.124)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.774 (0.130)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.768 (0.118)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.823 (0.112)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.786 (0.111)\n",
+      "---------------------------------------------------------------\n",
+      "K is 3\n",
+      ">RFC 0.805 (0.093)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.803 (0.080)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.838 (0.086)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.849 (0.072)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.822 (0.098)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.781 (0.090)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.801 (0.105)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.834 (0.081)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.823 (0.095)\n",
+      "---------------------------------------------------------------\n",
+      "K is 4\n",
+      ">RFC 0.780 (0.096)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.812 (0.083)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.860 (0.071)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.866 (0.072)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.836 (0.082)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.758 (0.100)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.819 (0.104)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.859 (0.059)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.849 (0.074)\n",
+      "---------------------------------------------------------------\n",
+      "K is 5\n",
+      ">RFC 0.798 (0.099)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.795 (0.083)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.872 (0.077)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.861 (0.079)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.849 (0.077)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.763 (0.096)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.834 (0.094)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.860 (0.083)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.867 (0.067)\n",
+      "---------------------------------------------------------------\n",
+      "K is 6\n",
+      ">RFC 0.811 (0.083)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.809 (0.069)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.863 (0.073)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.863 (0.067)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.864 (0.063)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.764 (0.093)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.824 (0.095)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.857 (0.074)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.878 (0.057)\n",
+      "---------------------------------------------------------------\n",
+      "K is 7\n",
+      ">RFC 0.835 (0.081)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.838 (0.073)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.864 (0.082)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.867 (0.074)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.864 (0.077)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.785 (0.092)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.846 (0.090)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.869 (0.070)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.888 (0.064)\n",
+      "---------------------------------------------------------------\n",
+      "K is 8\n",
+      ">RFC 0.852 (0.072)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.839 (0.078)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.854 (0.081)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.880 (0.074)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.879 (0.084)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.781 (0.089)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.870 (0.084)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.866 (0.083)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.885 (0.081)\n",
+      "---------------------------------------------------------------\n",
+      "K is 9\n",
+      ">RFC 0.848 (0.076)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.827 (0.090)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.846 (0.075)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.880 (0.069)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.878 (0.085)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.780 (0.083)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.864 (0.076)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.863 (0.070)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.884 (0.079)\n",
+      "---------------------------------------------------------------\n",
+      "K is 10\n",
+      ">RFC 0.837 (0.076)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.832 (0.081)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.863 (0.060)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.863 (0.075)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.877 (0.080)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.786 (0.100)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.863 (0.082)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.840 (0.074)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.888 (0.081)\n",
+      "---------------------------------------------------------------\n",
+      "K is 11\n",
+      ">RFC 0.850 (0.073)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.830 (0.078)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.846 (0.070)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.867 (0.077)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.879 (0.080)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.777 (0.079)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.866 (0.082)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.850 (0.065)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.901 (0.068)\n",
+      "---------------------------------------------------------------\n",
+      "K is 12\n",
+      ">RFC 0.835 (0.076)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.822 (0.082)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.864 (0.068)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.873 (0.071)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.881 (0.081)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.785 (0.069)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.857 (0.080)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.836 (0.069)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.902 (0.065)\n",
+      "---------------------------------------------------------------\n",
+      "K is 13\n",
+      ">RFC 0.845 (0.073)\n",
+      "---------------------------------------------------------------\n",
+      ">GBC 0.823 (0.077)\n",
+      "---------------------------------------------------------------\n",
+      ">KNN 0.851 (0.076)\n",
+      "---------------------------------------------------------------\n",
+      ">SVC 0.870 (0.067)\n",
+      "---------------------------------------------------------------\n",
+      ">LR 0.881 (0.080)\n",
+      "---------------------------------------------------------------\n",
+      ">DTC 0.787 (0.067)\n",
+      "---------------------------------------------------------------\n",
+      ">GNB 0.863 (0.081)\n",
+      "---------------------------------------------------------------\n",
+      ">GPC 0.819 (0.083)\n",
+      "---------------------------------------------------------------\n",
+      ">LDA 0.901 (0.071)\n",
+      "---------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compare different numbers of features selected using anova f-test\n",
+    "from numpy import mean\n",
+    "from numpy import std\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import f_classif\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "def f2_measure(y_true, y_pred):\n",
+    "  return fbeta_score(y_true, y_pred, beta=2)\n",
+    "# define models to test\n",
+    "def get_models():\n",
+    "  models, names = list(), list()\n",
+    "  # RFC\n",
+    "  models.append(RandomForestClassifier())\n",
+    "  names.append('RFC')\n",
+    "  # GBC\n",
+    "  models.append(GradientBoostingClassifier())\n",
+    "  names.append('GBC')\n",
+    "  # KNN\n",
+    "  models.append(KNeighborsClassifier())\n",
+    "  names.append('KNN')\n",
+    "  # SVC\n",
+    "  models.append(SVC())\n",
+    "  names.append('SVC')\n",
+    "  # LR\n",
+    "  models.append(LogisticRegression())\n",
+    "  names.append('LR')\n",
+    "  # DTC\n",
+    "  models.append(DecisionTreeClassifier())\n",
+    "  names.append('DTC')\n",
+    "  # GNB\n",
+    "  models.append(GaussianNB())\n",
+    "  names.append('GNB')\n",
+    "  # GPC\n",
+    "  models.append(GaussianProcessClassifier())\n",
+    "  names.append('GPC')\n",
+    "  # LDA\n",
+    "  models.append(LinearDiscriminantAnalysis())\n",
+    "  names.append('LDA')\n",
+    "  \n",
+    "  return models, names\n",
+    "# evaluate a model\n",
+    "def evaluate_model(X, y, model):\n",
+    "  # define evaluation procedure\n",
+    "  cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "  metric = make_scorer(f2_measure)\n",
+    "  # evaluate model\n",
+    "  scores = cross_val_score(model, X, y, scoring=metric, cv=cv, n_jobs=-1)\n",
+    "  return scores\n",
+    "\n",
+    "last_ix = len(df.columns)-1\n",
+    "X, y = df.drop(df.columns[last_ix], axis=1), df[df.columns[last_ix]]\n",
+    "# define dataset\n",
+    "models,names = [], []\n",
+    "models, names = get_models()\n",
+    "num_features = [i+1 for i in range(X.shape[1])] # enumerate each number of features\n",
+    "for k in num_features:\n",
+    "  # create pipeline\n",
+    "  model = models[i]\n",
+    "  fs = SelectKBest(score_func=f_classif, k=k)\n",
+    "  print(f\"K is {k}\")\n",
+    "  for i in range(len(models)):\n",
+    "    # Wrap the model in a pipeline with StandardScaler\n",
+    "    pipeline = Pipeline(steps=[('scaler', StandardScaler()),(\"power_tranformer\", PowerTransformer()), ('anova',fs), ('model', models[i])])\n",
+    "    # Evaluate the model\n",
+    "    scores = evaluate_model(X, y, pipeline)\n",
+    "    # summarize and store\n",
+    "    print('>%s %.3f (%.3f)' % (names[i], np.mean(scores), np.std(scores)))\n",
+    "    print(\"---------------------------------------------------------------\")"
    ]
   },
   {
