Added new models

--- a/training.ipynb
+++ b/training.ipynb
@@ -2110,26 +2110,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "## Using ANOVA we were able to find the 11 best columns reducing dimensionality."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LDA tested on numerous subsets of data reaps a F2 score of 90% and reduced the most false negatives. This is the model we should choose as our best model until we get more data and can conduct further testing. We also were able to find the 11 best columns reducing dimensionality."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Bonus: Hyperparameter tuining the best models and seeing if we can further improve F2 score"
+    "# Hyperparameter tuining the best models and seeing if we can further improve F2 score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2168,6 +2161,27 @@
     "        'model__shrinkage': [None, 'auto', 0.1, 0.01, 0.001],\n",
     "        'model__tol': [0.0001, 0.0002, 0.0005]\n",
     "    })\n",
+    "    \n",
+    "    #SVC\n",
+    "    models.append(SVC())\n",
+    "    names.append(\"SVC\")\n",
+    "    params.append({\n",
+    "    'model__C': np.logspace(-4, 4, 20),\n",
+    "    'model__kernel': ['linear', 'rbf', 'poly'],\n",
+    "    'model__gamma': ['scale', 'auto'] + list(np.logspace(-4, 1, 6)),\n",
+    "    'model__degree': [2, 3, 4]  # Only used when kernel is 'poly'\n",
+    "})\n",
+    "    #LR\n",
+    "    models.append(LogisticRegression())\n",
+    "    names.append(\"LR\")\n",
+    "    params.append ({\n",
+    "    'model__C': np.logspace(-4, 4, 20),\n",
+    "    'model__penalty': ['l1', 'l2'],\n",
+    "    'model__solver': ['liblinear', 'saga'],  # 'liblinear' and 'saga' work well with l1\n",
+    "    'model__max_iter': [100, 200, 300]\n",
+    "})\n",
+    "     \n",
+    "    \n",
     "    # Add other models and their parameter grids similarly...\n",
     "    return models, names, params\n",
     "\n",
@@ -2216,7 +2230,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## LDA tested on numerous subsets of data reaps a F2 score of 91% and reduced the most false negatives. This is the model we should choose as our best model until we get more data and can conduct further testing. We also were able to find the 11 best columns reducing dimensionality."
+   ]
   }
  ],
  "metadata": {
